--- a/Pytorch_kaggle/notebooks/1.ipynb
+++ b/Pytorch_kaggle/notebooks/1.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,17 +22,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_train = pd.read_csv(\"data/train.csv\")\n",
-    "df_test = pd.read_csv(\"data/test.csv\")"
+    "df_train = pd.read_csv(\"../data/train.csv\")\n",
+    "df_test = pd.read_csv(\"../data/test.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,17 +72,13 @@
     "scaling_columns=['Work/Study Hours','Financial Stress']\n",
     "\n",
     "one_hot_columns = [\n",
-    "    \"age_binned\",\"Gender\", \"Working Professional or Student\"\n",
-    "]\n",
-    "\n",
-    "label_columns = [\n",
-    "     \"Dietary Habits\", \"Have you ever had suicidal thoughts ?\"\n",
-    "]"
+    "    'Working Professional or Student', 'Dietary Habits'\n",
+    "]\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -205,7 +201,7 @@
        "7           0        40s  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -216,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -333,7 +329,7 @@
        "4        50s  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -351,30 +347,393 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.preprocessing import StandardScaler, OneHotEncoder, LabelEncoder, OrdinalEncoder\n",
-    "from sklearn.model_selection import cross_val_score, KFold\n",
-    "from sklearn.metrics import make_scorer, roc_auc_score\n",
-    "from sklearn.metrics import accuracy_score"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Creating a custom class for data preprocessor "
+    "from sklearn.preprocessing import MinMaxScaler, LabelEncoder, OneHotEncoder\n",
+    "\n",
+    "mm=MinMaxScaler()\n",
+    "le=LabelEncoder()\n",
+    "oe=OneHotEncoder(drop='first',sparse_output=False)\n",
+    "\n",
+    "for i in scaling_columns:\n",
+    "    df_train[i]=mm.fit_transform(df_train[i].values.reshape(-1,1))\n",
+    "    df_test[i]=mm.transform(df_test[i].values.reshape(-1,1))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
-    "class DataP"
+    "encoder_train=oe.fit_transform(df_train[one_hot_columns])\n",
+    "encoder_test=oe.transform(df_test[one_hot_columns])\n",
+    "encoded_train_df = pd.DataFrame(encoder_train, columns=oe.get_feature_names_out(one_hot_columns), index=df_train.index)\n",
+    "encoded_test_df = pd.DataFrame(encoder_test, columns=oe.get_feature_names_out(one_hot_columns), index=df_test.index)\n",
+    "df_train = df_train.drop(columns=one_hot_columns).join(encoded_train_df)\n",
+    "df_test = df_test.drop(columns=one_hot_columns).join(encoded_test_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Gender</th>\n",
+       "      <th>Sleep Duration</th>\n",
+       "      <th>Have you ever had suicidal thoughts ?</th>\n",
+       "      <th>Work/Study Hours</th>\n",
+       "      <th>Financial Stress</th>\n",
+       "      <th>Depression</th>\n",
+       "      <th>age_binned</th>\n",
+       "      <th>Working Professional or Student_Working Professional</th>\n",
+       "      <th>Dietary Habits_Moderate</th>\n",
+       "      <th>Dietary Habits_Unhealthy</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Female</td>\n",
+       "      <td>More than 8 hours</td>\n",
+       "      <td>No</td>\n",
+       "      <td>0.083333</td>\n",
+       "      <td>0.25</td>\n",
+       "      <td>0</td>\n",
+       "      <td>50s</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Male</td>\n",
+       "      <td>Less than 5 hours</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>0.583333</td>\n",
+       "      <td>0.50</td>\n",
+       "      <td>1</td>\n",
+       "      <td>30s</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Male</td>\n",
+       "      <td>Less than 5 hours</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>0.833333</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>1</td>\n",
+       "      <td>20s</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Male</td>\n",
+       "      <td>7-8 hours</td>\n",
+       "      <td>No</td>\n",
+       "      <td>0.500000</td>\n",
+       "      <td>0.25</td>\n",
+       "      <td>0</td>\n",
+       "      <td>50s</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Male</td>\n",
+       "      <td>7-8 hours</td>\n",
+       "      <td>No</td>\n",
+       "      <td>0.833333</td>\n",
+       "      <td>0.50</td>\n",
+       "      <td>0</td>\n",
+       "      <td>40s</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Gender     Sleep Duration Have you ever had suicidal thoughts ?  \\\n",
+       "0  Female  More than 8 hours                                    No   \n",
+       "1    Male  Less than 5 hours                                   Yes   \n",
+       "3    Male  Less than 5 hours                                   Yes   \n",
+       "6    Male          7-8 hours                                    No   \n",
+       "7    Male          7-8 hours                                    No   \n",
+       "\n",
+       "   Work/Study Hours  Financial Stress  Depression age_binned  \\\n",
+       "0          0.083333              0.25           0        50s   \n",
+       "1          0.583333              0.50           1        30s   \n",
+       "3          0.833333              0.00           1        20s   \n",
+       "6          0.500000              0.25           0        50s   \n",
+       "7          0.833333              0.50           0        40s   \n",
+       "\n",
+       "   Working Professional or Student_Working Professional  \\\n",
+       "0                                                1.0      \n",
+       "1                                                1.0      \n",
+       "3                                                1.0      \n",
+       "6                                                1.0      \n",
+       "7                                                1.0      \n",
+       "\n",
+       "   Dietary Habits_Moderate  Dietary Habits_Unhealthy  \n",
+       "0                      0.0                       0.0  \n",
+       "1                      0.0                       1.0  \n",
+       "3                      1.0                       0.0  \n",
+       "6                      1.0                       0.0  \n",
+       "7                      0.0                       1.0  "
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_train.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def transform(df):\n",
+    "    df['Gender'] = df['Gender'].map({'Female': 1, 'Male': 0})\n",
+    "    df['Have you ever had suicidal thoughts ?'] = df['Have you ever had suicidal thoughts ?'].map({'No': 0, 'Yes': 1})\n",
+    "    df['Sleep Duration'] = df['Sleep Duration'].map({'Less than 5 hours': 0, '7-8 hours': 1, 'More than 8 hours': 2})\n",
+    "    df['age_binned'] = df['age_binned'].map({'20s': 0, '30s': 1, '40s': 2, '50s': 3,'60s':4})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "transform(df_train)\n",
+    "transform(df_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Gender</th>\n",
+       "      <th>Sleep Duration</th>\n",
+       "      <th>Have you ever had suicidal thoughts ?</th>\n",
+       "      <th>Work/Study Hours</th>\n",
+       "      <th>Financial Stress</th>\n",
+       "      <th>Depression</th>\n",
+       "      <th>age_binned</th>\n",
+       "      <th>Working Professional or Student_Working Professional</th>\n",
+       "      <th>Dietary Habits_Moderate</th>\n",
+       "      <th>Dietary Habits_Unhealthy</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.083333</td>\n",
+       "      <td>0.25</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.583333</td>\n",
+       "      <td>0.50</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.833333</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.500000</td>\n",
+       "      <td>0.25</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.833333</td>\n",
+       "      <td>0.50</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Gender  Sleep Duration  Have you ever had suicidal thoughts ?  \\\n",
+       "0       1               2                                      0   \n",
+       "1       0               0                                      1   \n",
+       "3       0               0                                      1   \n",
+       "6       0               1                                      0   \n",
+       "7       0               1                                      0   \n",
+       "\n",
+       "   Work/Study Hours  Financial Stress  Depression age_binned  \\\n",
+       "0          0.083333              0.25           0          3   \n",
+       "1          0.583333              0.50           1          1   \n",
+       "3          0.833333              0.00           1          0   \n",
+       "6          0.500000              0.25           0          3   \n",
+       "7          0.833333              0.50           0          2   \n",
+       "\n",
+       "   Working Professional or Student_Working Professional  \\\n",
+       "0                                                1.0      \n",
+       "1                                                1.0      \n",
+       "3                                                1.0      \n",
+       "6                                                1.0      \n",
+       "7                                                1.0      \n",
+       "\n",
+       "   Dietary Habits_Moderate  Dietary Habits_Unhealthy  \n",
+       "0                      0.0                       0.0  \n",
+       "1                      0.0                       1.0  \n",
+       "3                      1.0                       0.0  \n",
+       "6                      1.0                       0.0  \n",
+       "7                      0.0                       1.0  "
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_train.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Index: 108456 entries, 0 to 140699\n",
+      "Data columns (total 10 columns):\n",
+      " #   Column                                                Non-Null Count   Dtype   \n",
+      "---  ------                                                --------------   -----   \n",
+      " 0   Gender                                                108456 non-null  int64   \n",
+      " 1   Sleep Duration                                        108456 non-null  int64   \n",
+      " 2   Have you ever had suicidal thoughts ?                 108456 non-null  int64   \n",
+      " 3   Work/Study Hours                                      108456 non-null  float64 \n",
+      " 4   Financial Stress                                      108454 non-null  float64 \n",
+      " 5   Depression                                            108456 non-null  int64   \n",
+      " 6   age_binned                                            108456 non-null  category\n",
+      " 7   Working Professional or Student_Working Professional  108456 non-null  float64 \n",
+      " 8   Dietary Habits_Moderate                               108456 non-null  float64 \n",
+      " 9   Dietary Habits_Unhealthy                              108456 non-null  float64 \n",
+      "dtypes: category(1), float64(5), int64(4)\n",
+      "memory usage: 8.4 MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_train.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_test.to_csv(\"../data/cleaned_test.csv\")\n",
+    "df_train.to_csv(\"../data/cleaned_train.csv\")"
    ]
   }
  ],
